# google-news-api

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci_publish.yml
examples/: __init__.py  advanced_usage.py  basic_usage.py
google_news_api/: __init__.py  client.py  config.py  providers.py
mcp_server/: README.md  googlenews.py  pyproject.toml
mcp_server/tests/: conftest.py  test_googlenews.py
tests/: __init__.py  test_client.py  test_config.py  test_exceptions.py  test_utils.py
